--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="en">
 <head>
-    <meta charset="UTF-8"
-    <meta name="viewport" content="width=device-width", initial-scale="1.0"
+    <meta charset="UTF-8">
     <title>Azim Bayaliev site</title>
 </head>
 <body>
     <h1>Welcome to my personal site</h1>
     <h2>About Me</h2>
-    <img src="images/Image.jpeg" alt="Azim Bayaliev" width="200"
-    <h2><p>My Hobbies</p></h2>
+    <img src="images/Image.jpeg" alt="Azim Bayaliev" width="200">
+
+    <h2>My Hobbies</h2>
     <ul>
         <li>Basketball</li>
         <li>Swimming</li>
